# agentic_rag

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  Zusammenfassung.txt  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
agents/: orchestrator.py
agents/tools/: documents.py  search.py
apps/audit/: middleware.py  models.py
apps/documents/: admin.py  models.py  serializers.py  views.py
apps/users/: admin.py  models.py
config/: celery.py  urls.py
config/settings/: base.py  dev.py  prod.py
django_root/agents/: context.py  orchestrator.py  schema.py  tasks.py  urls.py  views.py
django_root/config/: celery.py  urls.py
django_root/ingestion/: tasks.py
django_root/llm/: client.py  prompts.py
django_root/retrieval/: document_similarity.py  fulltext_search.py  graph.py  query_expansion.py  reranker.py  vector_search.py  views.py
django_root/templates/: 404.html  500.html
django_root/tests/: conftest.py  test_agent.py  test_api.py  test_chunkers.py  test_e2e.py  test_parsers.py  test_permissions.py  test_retrieval.py  test_ui_views.py
docker/: Dockerfile  build-docker.sh  docker-compose.ollama.yml  docker-compose.yml
docs/: Tool_Anbindung.md
ingestion/: tasks.py
ingestion/chunkers/: base.py  (+1 more)
llm/: client.py
retrieval/: fulltext_search.py  hybrid.py  metadata_filter.py  vector_search.py
scripts/: deploy-local-docker.sh  deploy-remote-docker.sh  download_testdata.py
(+54 files in other folders)
