[project]
name = "agentic_rag"
version = "0.0.1"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501", "N806"]
"config/settings/*.py" = ["F401", "F403", "F405"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py", "*_test.py"]
addopts = "--tb=short -q"
